# ceres-lambda

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.asciidoc
.ci/: azure-pipelines.yml
.ci/templates/: download_artifacts.yml  install_dependencies.yml  store_artifacts.yml  version_information.yml
.includes/: Makefile.in
aws/: Cargo.toml
aws-scaletower/: Cargo.toml  Makefile
aws-scaletower/examples/: get_metrics.rs
aws-scaletower/src/: burst_balance.rs  config.rs  error.rs  lib.rs  metrics.rs
aws-scaletower/src/events/: cron.rs  mod.rs
aws-watchtower/: Cargo.toml  Makefile  README.md  build.rs
aws-watchtower/src/: asg_mapping.rs  bosun.rs  config.rs  error.rs  init.rs  kms.rs  lambda.rs  lib.rs  metrics.rs
aws-watchtower/src/aws/: ec2.rs  kms.rs  mod.rs
aws-watchtower/src/events/: asg.rs  ebs.rs  mod.rs  ping.rs
aws-watchtower/src/events/ec2/: ebs.rs  ec2.rs  mod.rs
aws/src/: auth.rs  cloudwatch.rs  ec2.rs  iam.rs  kms.rs  lib.rs
bosun/: Cargo.toml
bosun/examples/: metadata.rs
bosun/src/: lib.rs
centerdevice-watchtower/: Cargo.toml  Makefile  README.md
centerdevice-watchtower/src/: config.rs  error.rs  lib.rs  metrics.rs
centerdevice-watchtower/src/centerdevice/: health.rs
centerdevice-watchtower/src/events/: cron.rs  mod.rs  ping.rs
credentials-watchtower/: Cargo.toml  README.md
credentials-watchtower/src/: check_credentials.rs  lib.rs
duo/: Cargo.toml
duo/contrib/: sign.py
duo/src/: lib.rs
lambda/: Cargo.toml  build.rs
lambda/src/: bosun.rs  config.rs  error.rs  lib.rs  metrics.rs
security-watchtower/: Cargo.toml  Makefile  README.md
security-watchtower/src/: check_credentials.rs  config.rs  lib.rs  metrics.rs
security-watchtower/src/events/: cron.rs  mod.rs
testing/: Cargo.toml
testing/src/: lib.rs
watch-autoscaling/: .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs
watch-autoscaling/src/: bosun.rs  config.rs  lib.rs
