[package]
name = "aws-watchtower"
version = "0.2.1"
authors = ["Lukas Pustina <lukas.pustina@centerdevice.com>"]
build = "build.rs"

edition = "2018"

[[bin]]
name = "aws-watchtower"
path = "src/bin/aws-watchtower.rs"

[[bin]]
name = "validate-config"
path = "src/bin/validate-config.rs"

[lib]
name = "aws_watchtower"
path = "src/lib.rs"

[dependencies]
aws = { version = "0.0.1", path = "../aws" }
clams = "0.0.13"
clams-derive = "^0.0.4"
bosun = { version = "0.0.1", path = "../bosun" }
env_logger = "0.6.0"
failure = "0.1"
failure_derive = "0.1"
lambda_runtime = "0.1.0"
lazy_static = "1.2.0"
log = "0.4"
reqwest = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.2"
toml = "0.4"

[dev-dependencies]
chrono = "0.4.6"
spectral = "^0.6"
testing = { version = "0.0.1", path = "../testing" }

[build-dependencies]
vergen = "3"

# Enable Debug Symbols in Release build
#[profile.release]
#debug = true

