[package]
name = "bosun"
version = "0.0.1"
authors = ["Lukas Pustina <lukas.pustina@centerdevice.com>"]

edition = "2018"

[lib]
name = "bosun"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.6"
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
reqwest = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
spectral = "^0.6"
testing = { version = "0.0.1", path = "../testing" }

