[package]
name = "duo"
version = "0.0.1"
authors = ["Lukas Pustina <lukas.pustina@centerdevice.com>"]

edition = "2018"

[lib]
name = "duo"
path = "src/lib.rs"

[dependencies]
base64 = "0.10"
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
hex = "0.4"
log = "0.4"
reqwest = "0.9"
ring = "0.16"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
env_logger = "0.6"
spectral = "^0.6"
testing = { version = "0.0.1", path = "../testing" }

