[package]
name = "lambda"
version = "0.1.0"
authors = ["Lukas Pustina <lukas.pustina@centerdevice.com>"]

edition = "2018"

[lib]
name = "lambda"
path = "src/lib.rs"

[dependencies]
aws = { version = "0.0.3", path = "../aws" }
clams = "0.0.13"
clams-derive = "^0.0.4"
bosun = { version = "0.0.2", path = "../bosun" }
env_logger = "0.6"
failure = "0.1"
failure_derive = "0.1"
lambda_runtime = "0.1"
lazy_static = "1.2"
log = "0.4"
reqwest = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.2"
toml = "0.4"

[dev-dependencies]
chrono = "0.4"
spectral = "^0.6"
testing = { version = "0.0.1", path = "../testing" }

