[package]
name = "ceres-watch-autoscaling"
version = "0.1.1"
authors = ["Lukas Pustina <lukas.pustina@centerdevice.com>"]
build = "build.rs"

edition = "2018"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[[bin]]
name = "validate-config"
path = "src/bin/validate-config.rs"

[lib]
name = "watch_autoscaling"
path = "src/lib.rs"

[dependencies]
aws_lambda_events = "0.1.0"
clams = "0.0.13"
clams-derive = "^0.0.4"
chrono = "0.4.6"
base64 = "0.10"
env_logger = "0.6.0"
failure = "0.1"
failure_derive = "0.1"
lambda_runtime = "0.1.0"
log = "0.4"
reqwest = "0.9"
rusoto_core = "0.35"
rusoto_kms = "0.35"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.2"
toml = "0.4"

[dev-dependencies]
spectral = "^0.6"

[build-dependencies]
vergen = "3"

# Enable Debug Symbols in Release build
#[profile.release]
#debug = true

